Fix tests
- Show an error message when the unicode escaped version of underscore
  is used as a local variable in a Java 21 project with preview disabled
- Test error messages for underscore for Java 21 with and without
  preview enabled
- Fix test failure related to resolving type of "var" variable in foreach loops

Signed-off-by: David Thompson <davthomp@redhat.com>